--- a/config/database.yml
+++ b/config/database.yml
@@ -14,10 +14,11 @@
 #
 development:
   adapter: postgresql
+  host: localhost
   encoding: unicode
   database: shortly_development
   pool: 5
-  username: shortly
+  username:
   password:
 
   # Connect on a TCP socket. Omitted by default since the client uses a
@@ -40,16 +41,18 @@ development:
 # Do not set this db to the same as development or production.
 test:
   adapter: postgresql
+  host: localhost
   encoding: unicode
   database: shortly_test
   pool: 5
-  username: shortly
+  username:
   password:
 
 production:
   adapter: postgresql
+  host: localhost
   encoding: unicode
   database: shortly_production
   pool: 5
-  username: shortly
+  username:
   password:
